# rm

./: README.md
session2/work1/: CMakeLists.txt  README.md  in.txt  main.cpp
session2/work2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
session2/work2/install/cilent/share/cilent/: package.bash  package.zsh
session2/work2/log/: latest_build
session2/work2/rm_server/: start.sh
session2/work2/rm_server/rm_server/lib/: rm_server_node
session2/work2/rm_server/rm_server/share/msg/: GetElGamalParams.msg
session2/work2/rm_server/rm_server/share/rm_server/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
session2/work2/rm_server/rm_server/share/rm_server/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_rm_server__rosidl_generator_cExport-noconfig.cmake  export_rm_server__rosidl_generator_cExport.cmake  export_rm_server__rosidl_generator_cppExport.cmake  export_rm_server__rosidl_generator_pyExport-noconfig.cmake  export_rm_server__rosidl_generator_pyExport.cmake  export_rm_server__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_rm_server__rosidl_typesupport_fastrtps_cExport.cmake  export_rm_server__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_rm_server__rosidl_typesupport_fastrtps_cppExport.cmake  rm_serverConfig.cmake  rm_server__rosidl_typesupport_cExport-noconfig.cmake  rm_server__rosidl_typesupport_cExport.cmake  rm_server__rosidl_typesupport_cppExport-noconfig.cmake  (+8 more)
session2/work2/src/: build_cilent.sh  run_cilent.sh
session2/work2/src/cilent/: CMakeLists.txt  package.xml
session2/work2/src/cilent/src/: info.md  topic_listener.cpp
session2/work2/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
session2/work2/src/log/: latest_build
(+66 files in other folders)
